--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,19 @@ name = "py-stream-scraper"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-authors = [
-    { name = "thecatblake", email = "k222ryousuke@gmail.com" }
-]
+authors = [{ name = "thecatblake", email = "k222ryousuke@gmail.com" }]
 requires-python = ">=3.10"
-dependencies = []
-
-[project.scripts]
-py-stream-scraper = "py_stream_scraper:main"
+dependencies = [
+    "fakeredis>=2.32.0",
+    "pytest>=8.4.2",
+    "redis>=7.0.1",
+    "ultimate-sitemap-parser>=1.6.0",
+]
 
 [build-system]
 requires = ["uv_build>=0.8.11,<0.9.0"]
 build-backend = "uv_build"
+
+[tool.pytest.ini_options]
+addopts = "-q"
+pythonpath = ["src"]
