--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 authors = [{ name = "thecatblake", email = "k222ryousuke@gmail.com" }]
 requires-python = ">=3.10"
 dependencies = [
+    "aiohttp>=3.13.2",
     "fakeredis>=2.32.0",
     "pytest>=8.4.2",
     "redis>=7.0.1",
