--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ authors = [{ name = "thecatblake", email = "k222ryousuke@gmail.com" }]
 requires-python = ">=3.10"
 dependencies = [
     "aiohttp>=3.13.2",
+    "beautifulsoup4>=4.14.2",
+    "click>=8.3.0",
     "fakeredis>=2.32.0",
     "pytest>=8.4.2",
     "redis>=7.0.1",
+    "rich>=14.2.0",
     "rocksdb-py>=0.0.6",
     "tqdm>=4.67.1",
     "ultimate-sitemap-parser>=1.6.0",
@@ -22,3 +25,6 @@ build-backend = "uv_build"
 [tool.pytest.ini_options]
 addopts = "-q"
 pythonpath = ["src"]
+
+[project.scripts]
+sx = "sx.cli:main"
