--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "py-stream-scraper"
-version = "0.1.20"
+version = "0.1.21"
 description = "Add your description here"
 readme = "README.md"
 authors = [{ name = "thecatblake", email = "k222ryousuke@gmail.com" }]
@@ -8,6 +8,7 @@ requires-python = ">=3.10"
 dependencies = [
     "aiohttp>=3.13.2",
     "beautifulsoup4>=4.14.2",
+    "brotli>=1.2.0",
     "click>=8.3.0",
     "fakeredis>=2.32.0",
     "pytest>=8.4.2",
